# LSA-translator

./: .gitignore  README.md  pyproject.toml
experiments/Docs/: 02_transformers.md  Experiments.md
experiments/data_augmentation/01_kinematic_augmentation/: README.md
experiments/data_augmentation/02_PCA_augmentation/: README.md
experiments/landmarks/01_processing_speed/: README.md
experiments/landmarks/02_mmpose_test/: README.md
experiments/sign_analysis/01_hand_acceleration/: README.md
src/: train.py  train_hand_detector.py
src/data/LSA64/: dataset.py
src/models/: HandDetector.py  __init__.py
src/scripts/: right_sign_detector.py
