[project]
name = "LSA-Translator"
version = "0.1.0"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "numpy",
    "torch",
    "pandas",
    "lightning",
    "sortedcontainers",
    "gtts",
    "pydub",
    "mediapipe",
    "torchmetrics",
    "yt-dlp",
    "tqdm",
    "wandb",
    "matplotlib",
    "rich"
]